--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 3 Módulo 4</title>
     <script src="./script/script.js" defer></script>
+    <script src="./script/script2.js" defer></script>
     <link rel="stylesheet" href="./style/style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
